fixed the dark mode
rename the classes

--- a/src/style.css
+++ b/src/style.css
@@ -95,7 +95,7 @@ div .todo-priority {
   font-weight: bold;
   margin: 5px;
   margin-top: 7px;
-  background-color: rgb(184, 158, 110);
+  background-color: rgb(221, 162, 51);
   color: black;
   padding: 12px;
   width: 120px;
@@ -122,7 +122,7 @@ div .todo-priority {
   height: 40px;
   font-size: 18px;
   border-radius: 3px;
-  background-color: rgba(119, 127, 136, 0.637);
+  background-color: rgb(94, 89, 89);
   color: white;
 }
 .label {
@@ -137,8 +137,25 @@ button {
   border-radius: 3px;
   margin: 2px;
 }
+.dark-body {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 26, 51, 0.815) 9%,
+    rgba(2, 1, 1, 0.788) 49%,
+    rgba(0, 0, 0, 0.671) 85%
+  );
+}
+.dark-head-buttons {
+  background-color: rgb(56, 10, 10);
+  color: white;
+}
+.dark-buttons {
+  background-color: rgb(46, 44, 44);
+  color: white;
+}
 #add-button {
-  background-color: #b7deee;
+  background-color: #7c5d24;
   padding: 5px;
   font-size: 22px;
   margin-right: 0;
@@ -154,7 +171,7 @@ button {
 }
 #search-button {
   padding: 3px;
-  background-color: #b7deee;
+  background-color: #7c5d24;
   font-size: 22px;
   margin-right: 0;
   margin-left: 10px;
@@ -168,7 +185,7 @@ button {
   background-color: rgba(66, 59, 59, 0.822);
 }
 #sort-button {
-  background-color: rgb(184, 158, 110);
+  background-color: rgb(221, 162, 51);
   font-size: 25px;
   margin-left: 0;
   margin-bottom: 5px;
@@ -183,7 +200,7 @@ button {
   background-color: rgba(66, 59, 59, 0.822);
 }
 #undo-button {
-  background-color: rgb(184, 158, 110);
+  background-color: rgb(221, 162, 51);
   font-size: 25px;
   margin-left: 0;
   margin-bottom: 5px;
